# ga-benchmark

./: .gitignore  AlgorithmInverseKinematics.cpp  AlgorithmRayTracing.cpp  BinaryOperations.cpp  CMakeLists.txt  Declarations.hpp  InverseKinematics.cpp  Macros.hpp  Products.cpp  README.md  Types.hpp  UnaryOperations.cpp  Utils.hpp  gabm.py  gabm_results.ipynb  plot.py
libs/: README.md  README.txt
runs/: README.md
source/: README.md
source/GATL/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedAlgorithmRayTracing.hpp  SpecializedBinaryOperations.hpp  SpecializedInverseKinematics.hpp  SpecializedProducts.cpp  SpecializedProducts.hpp  SpecializedUtils.hpp
source/Gaalet/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedAlgorithmRayTracing.hpp  SpecializedBinaryOperations.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
source/Gaalop/: CMakeLists.txt  ConfigureBasisBlades.cmake  ConfigureSpecializedProducts.cmake  ConfigureSpecializedUtils.cmake  OptimizeSpecializedAlgorithmInverseKinematics.cmake  OptimizeSpecializedAlgorithmRayTracing.cmake  OptimizeSpecializedBinaryOperations.cmake  OptimizeSpecializedInverseKinematics.cmake  OptimizeSpecializedProducts.cmake  OptimizeSpecializedUnaryOperations.cmake  OptimizeSpecializedUtils.cmake  SetBasisBlades.cmake  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpg  SpecializedBinaryOperations.hpg.in  SpecializedInverseKinematics.hpg  SpecializedProducts.hpg  SpecializedProducts.hpg.in  SpecializedUnaryOperations.hpg.in  SpecializedUtils.hpg  SpecializedUtils.hpg.in
source/Gaalop/algebras/c2ga/: definition.csv  macros.clu  products.csv
source/Gaalop/algebras/c3ga/: definition.csv  macros.clu  products.csv
source/Gaalop/algebras/e2ga/: macros.clu
source/Gaalop/algebras/e3ga/: macros.clu
source/Gaalop/algebras/e4ga/: macros.clu
source/Gaalop/algebras/e5ga/: definition.csv  macros.clu
source/Gaalop/algebras/h2ga/: definition.csv  macros.clu
source/Gaalop/algebras/h3ga/: definition.csv  macros.clu  products.csv
source/Gaalop/algebras/h4ga/: definition.csv  macros.clu  products.csv
source/Gaalop/algebras/m2ga/: definition.csv  macros.clu  products.csv
source/Gaalop/algebras/m3ga/: definition.csv  macros.clu  products.csv
source/Garamon/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedBinaryOperations.hpp  SpecializedProducts.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp  c2ga.conf  c3ga.conf  e2ga.conf  e4ga.conf  h2ga.conf  h3ga.conf  h4ga.conf  m2ga.conf  m3ga.conf
source/Garamon/algebras/: c3ga.conf  e3ga.conf  e5ga.conf  h3ga.conf
source/GluCat/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedProducts.hpp  SpecializedUtils.hpp
source/GluCatFramedMulti/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgebraCommons.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedBinaryOperations.hpp  SpecializedInverseKinematics.hpp  SpecializedProducts.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
source/GluCatMatrixMulti/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedAlgorithmRayTracing.hpp  SpecializedBinaryOperations.hpp  SpecializedProducts.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
source/TbGAL/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedBinaryOperations.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
source/Versor/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedAlgorithmInverseKinematics.hpp  SpecializedBinaryOperations.hpp  SpecializedProducts.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
